# dservercore

./: .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CITATION.cff  CLAUDE.md  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  README.rst  SPEC.rst  devel.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  wsgi.py
.github/workflows/: containers.yml  documentation.yml  paper.yml  publish.yml  test.yml
app/: __init__.py  routes.py  utils.py
devel/: .gitignore  README  README.md  create_test_data.sh  dtool.json  dtool_lookup_aiopenapi3_client_usage_sample.py  dtool_lookup_openapi_client_usage_sample.py  env.rc  export_token_from_local_test_server.sh  export_token_from_remote_token_generator.sh  init.sh  openapi-generator-example.sh  python-client-config.yml  python-experimental-client-config.yml  python-legacy-client-config.yml  requirements.txt  run.sh  setup.sh
docker/: README.md  devel.yml  dtool.json  env.yml
docker/dserver/: Dockerfile  boot.sh
docker/dserver_devel/: Dockerfile
docker/dtool_lookup_server_devel/: Dockerfile  boot.sh  dtool.json
docs/: api.rst  conf.py  development.rst  index.rst  refs.bib  requirements.txt  story.rst  story_dserver.rst  story_dtool.rst  story_plugins.rst
dserver/: __init__.py  annotations_routes.py  base_uri_routes.py  blueprint.py  cli.py  config_routes.py  date_utils.py  extensions.py  manifest_routes.py  me_routes.py  readme_routes.py  schemas.py  sort.py  sql_models.py  tags_routes.py  uri_routes.py  user_routes.py  utils.py  utils_auth.py  uuid_routes.py
dservercore/: __init__.py  annotations_routes.py  base_uri_routes.py  blueprint.py  cli.py  config.py  config_routes.py  date_utils.py  manifest_routes.py  me_routes.py  readme_routes.py  schemas.py  sort.py  sql_models.py  tags_routes.py  uri_routes.py  user_routes.py  utils.py  utils_auth.py  uuid_routes.py
dservercore/templates/: index.html
dtool_lookup_server/: __init__.py  annotations_routes.py  base_uri_routes.py  blueprint.py  cli.py  config.py  config_routes.py  dataset_routes.py  date_utils.py  extensions.py  graph.py  manifest_routes.py  me_routes.py  mongo_utils.py  nosql_db.py  permission_routes.py  readme_routes.py  routes.py  schemas.py  sort.py  sql_models.py  tags_routes.py  uri_routes.py  user_admin_routes.py  user_routes.py  utils.py  utils_auth.py  utils_retrieve.py  utils_search.py  uuid_routes.py
dtool_lookup_server/templates/: index.html
experiments/: SPEC.rst
experiments/dtool-lookup-server-auth/: README.rst  setup.py
experiments/dtool-lookup-server-auth/dtool_lookup_server_auth/: __init__.py
experiments/dtool-lookup-server-search/: README.rst  setup.py
experiments/dtool-lookup-server-search/dtool_lookup_server_search/: __init__.py
experiments/dtool-lookup-sever-core/: README.rst  setup.py
experiments/dtool-lookup-sever-core/dtool_lookup_server_core/: __init__.py  abc.py  plugins.py
experiments/entrypoints_vs_imports/: README.md  test.py
experiments/entrypoints_vs_imports/core/: setup.py
experiments/entrypoints_vs_imports/core/core/: __init__.py
experiments/entrypoints_vs_imports/plugin/: setup.py
experiments/entrypoints_vs_imports/plugin/plugin/: __init__.py
experiments/tests/: test_auth_unit.py  test_core_unit.py  test_integration.py  test_search_unit.py
paper/: .gitignore  paper.bib  paper.md
provision/: .gitignore  playbook.yml
provision/docker/dtool_lookup_server/: Dockerfile
provision/roles/dtool_lookup_server/files/: load_env.sh  start_gunicorn.sh
provision/roles/dtool_lookup_server/tasks/: main.yml
provision/roles/dtool_lookup_server/templates/: load_env.sh
provision/roles/epel/tasks/: main.yml
provision/roles/firewalld/tasks/: main.yml
provision/roles/mongodb/tasks/: main.yml
provision/roles/nginx/files/: dtool_lookup_server.conf  nginx.conf
provision/roles/nginx/tasks/: main.yml
registration_utils/: .gitignore  get_token.sh  mass_register.py  mass_registration.py  register.py  requirements.txt
tests/: __init__.py  conftest.py  test_admin_user_routes.py  test_base_uri_routes.py  test_cli.py  test_config.py  test_config_routes.py  test_dataset_routes.py  test_dependency_graph_queries.py  test_dict_to_mongo_query.py  test_lookup_datasets_by_user_and_uuid.py  test_lookup_datasets_route.py  test_me_routes.py  test_metadata_retrieval_routes.py  test_nosql_dataset_utils.py  test_permission_routes.py  test_readme_write_authorization.py  test_register_dataset_info.py  test_register_dataset_route.py  test_search_for_datasets.py  test_sorting.py  test_sql_dataset_utils.py  test_sql_list_datasets_by_user.py  test_summary_of_datasets_by_user.py  test_timestamp_consistency.py  test_uploaded_by.py  test_uri_routes.py  test_uri_search_by_uuid.py  test_user_routes.py  test_utils.py  test_utils_auth.py  test_utils_base_uri_management.py  test_utils_dataset_info_is_valid.py  test_utils_get_annotations_from_uri_by_user.py  test_utils_get_manifest_from_uri_by_user.py  test_utils_get_readme_from_uri_by_user.py  test_utils_mongodb_helpers.py  test_utils_permission_management.py  test_utils_preprocess_query_base_uris.py  test_utils_register_dataset.py  (+5 more)
(+5 files in other folders)
