[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dservercore"
description = "Web API to register/lookup/search for dtool dataset metadata"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
    {name = "Tjelvar Olsson", email = "tjelvar.olsson@gmail.com"}
]
dynamic = ["version"]
dependencies = [
        "setuptools",
        "flask<3",
        "pymongo",
        "alembic",
        "flask-sqlalchemy",
        "flask-migrate",
        "flask-pymongo",
        "flask-marshmallow",
        "flask-smorest",
        "marshmallow-sqlalchemy",
        "flask-cors",
        "dtoolcore>=3.18.0",
        "flask-jwt-extended[asymmetric_crypto]>=4.0",
        "pyyaml"
    ]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-spelling",
    "myst-parser==4.0.0"
]

[project.urls]
Documentation = "https://dservercore.readthedocs.io"
Repository = "https://github.com/jic-dtool/dservercore"
Changelog = "https://github.com/jic-dtool/dservercore/blob/main/CHANGELOG.rst"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "dservercore/version.py"

[tool.setuptools]
packages = ["dservercore"]

[project.entry-points."flask.commands"]
"base_uri" = "dservercore.cli:base_uri_cli"
"user" = "dservercore.cli:user_cli"
"config" = "dservercore.cli:config_cli"
"dataset" = "dservercore.cli:dataset_cli"
