[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "dservercore"
description = "Web API to register/lookup/search for dtool dataset metadata"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Tjelvar Olsson", email = "tjelvar.olsson@gmail.com"}
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "flask<3",
    "pymongo",
    "alembic",
    "flask-sqlalchemy",
    "flask-migrate",
    "flask-pymongo",
    "flask-marshmallow",
    "flask-smorest",
    "marshmallow-sqlalchemy",
    "flask-cors",
    "dtoolcore>=3.18.0",
    "flask-jwt-extended[asymmetric_crypto]>=4.6.0",
    "pyyaml",
    "marshmallow<5.0.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "dserver-search-plugin-mongo",
    "dserver-retrieve-plugin-mongo",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-spelling",
    "myst-parser==4.0.0"
]

[project.urls]
Documentation = "https://dservercore.readthedocs.io"
Repository = "https://github.com/jic-dtool/dservercore"
Changelog = "https://github.com/jic-dtool/dservercore/blob/main/CHANGELOG.rst"

[project.entry-points."flask.commands"]
base_uri = "dservercore.cli:base_uri_cli"
user = "dservercore.cli:user_cli"
config = "dservercore.cli:config_cli"
dataset = "dservercore.cli:dataset_cli"

[tool.flit.module]
name = "dservercore"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "dservercore/version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=dservercore --cov-report=term-missing"

[tool.flake8]
exclude = ["venv*", "env*", ".tox", ".git", "*.egg", "build", "docs", "migrations", "jwt-spike"]
